# Letterguessd

./: README.md  app.js  index.html  movie_data.json  pyproject.toml  scraper.py  style.css
.github/workflows/: scrape.yml
